--- a/src/components/shopping/pages/shoppingDashboard/shoppingDashboard.css
+++ b/src/components/shopping/pages/shoppingDashboard/shoppingDashboard.css
@@ -1,7 +1,3 @@
-/* body{
-    color: #f3f3f3;
-} */
-
 .parent-banner {
     margin: 0 auto;
     width: 1200px;
@@ -20,45 +16,21 @@
 
 .parent-banner #homebanner{
 
-    background-image: url('./../../../../images/home.jpg');
+    background-image: url('../../../../assets/images/home.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 .parent-banner #img1{
 
-    background-image: url('./../../../../images/img1.jpg');
+    background-image: url('../../../../assets/images/img1.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 .parent-banner #img2{
 
-    background-image: url('./../../../../images/img2.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.parent-banner #img3{
-
-    background-image: url('./../../../../images/img3.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.parent-banner #img4{
-
-    background-image: url('./../../../../images/img4.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.parent-banner #img5{
-
-    background-image: url('./../../../../images/img5.jpg');
+    background-image: url('../../../../assets/images/img2.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
