--- a/src/components/shopping/pages/shoppingDashboard/shoppingDashboard.css
+++ b/src/components/shopping/pages/shoppingDashboard/shoppingDashboard.css
@@ -1,37 +1,69 @@
-.parent-banner {
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
+    background-color: #f3f3f3;
+}
+.main-banner {
     margin: 0 auto;
-    width: 1200px;
-    height: 400px;
+    width: 1600px;
+    height: 800px;
     background-color: #fff;
     overflow: hidden;
     position: relative;
 }
-.parent-banner .imgban{
+
+.main-banner .imgban{
     width: 100%;
     height: 100%;
     position: absolute;
-    transition: all ease-in-out 1000ms;
-    -webkit-transition:all ease-in-out 1000ms;
+    top:0px;
+    transition: all ease-in-out 500ms;
+    -webkit-transition:all ease-in-out 500ms;
 }
 
-.parent-banner #homebanner{
-
-    background-image: url('../../../../assets/images/home.jpg');
+.main-banner #imgban3{
+    background-image: url('../../../../assets/images/img3.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
-.parent-banner #img1{
+.main-banner #imgban2{
+    background-image: url('../../../../assets/images/img2.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
 
+.main-banner #imgban1{
     background-image: url('../../../../assets/images/img1.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
-.parent-banner #img2{
 
-    background-image: url('../../../../assets/images/img2.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+.main-banner .imgban-box h2{
+    font-size: 40px;
+    color: white;
+
+}
+.main-banner .imgban-box p{
+    font-size: 20px;
+    padding-top: 6px;;
+    color: white;
+}
+.main-banner #imgban1 .imgban-box {
+    padding-top: 400px;
+    padding-left: 900px;
+}
+.main-banner #imgban2 .imgban-box {
+    padding-top: 550px;
+    padding-left: 100px;
+
+}
+.main-banner #imgban3 .imgban-box {
+    padding-top: 450px;
+    padding-left: 200px;
+
 }
