--- a/src/components/shopping/pages/shoppingHistory/shoppingHistory.css
+++ b/src/components/shopping/pages/shoppingHistory/shoppingHistory.css
@@ -1,3 +1,13 @@
 a {
     cursor: pointer;
 }
+h1{
+    text-align: center;
+    color:#2671eb;
+}
+.shopping-history-main {
+    background-image: url('../../../../assets/images/img3.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
